Fix drawer overflow

--- a/src/components/action-drawer/ActionDrawer.module.css
+++ b/src/components/action-drawer/ActionDrawer.module.css
@@ -1,9 +1,14 @@
 .container {
+  overflow: hidden;
+  border-radius: 40px;
+}
+
+.content {
   padding-top: 16px;
   padding-bottom: 64px;
 }
 
-.container > div {
+.content > div {
   height: 56px;
   display: flex;
   align-items: center;
@@ -11,7 +16,7 @@
   border-bottom: 1px solid var(--neutral-light-8);
 }
 
-.container > div:first-child {
+.content > div:first-child {
   border-top: 1px solid var(--neutral-light-8);
 }
 
